# gloss

./: .gitignore  Cargo.toml  README.md
gloss_cli/: Cargo.toml
gloss_cli/src/: main.rs
gloss_core/: Cargo.toml
gloss_core/src/: backend.rs  config.rs  generator.rs  lib.rs  parser.rs
gloss_core/tests/: absent_field.rs  cascading_config.rs  dependency.rs  encoder_backend.rs  function_naming.rs  overrides.rs
test_project/: gleam.toml  gloss.toml  manifest.toml
test_project/src/: decode_example.gleam  encode_example.gleam  example.gleam
