[package]
name = "gloss_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "gloss_core"
path = "src/lib.rs"

[dependencies]
gleam-core = { git = "https://github.com/gleam-lang/gleam", version = "1.13.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "1"
camino = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
